# python-dev

./: .env  .gitconfig  .gitignore  .tmux.conf  .zsh_aliases  .zshrc  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.config/nvim/: dein.toml  dein_lazy.toml  init.vim
.config/nvim/autocmds/: file_type_indent.vim
.config/nvim/autocmds/fileTypeIndent/: cpp.vim  css.vim  html.vim  python.vim  rust.vim  toml.vim  vim.vim  yaml.vim
.config/nvim/plugins/: deoplete.vim  vimproc.vim
.config/nvim/templates/html/: base-html.html  snip-center.html  snip-img.html  snip-link.html  snip-list.html  snip-order.html  snip-style.html
.config/nvim/templates/python/: base-atcoder.py  snip-data_compare.py  snip-data_int.py  snip-data_str.py  snip-get_args.py  snip-input_int.py  snip-input_int_list.py  snip-input_str.py  snip-lcs.py  snip-loop_iterable.py  snip-loop_range_N.py
.config/nvim/templates/rust/: base-atcoder.py  snip-input.rs
