[tool.poetry]
name = "neovim-python"
version = "0.1"
description = "コーディング環境"
authors = ["Raichu"]

[tool.poetry.dependencies]
# pandas 1.3 needs python >= 3.7.1
# if you want to use python >= 3.7, you have to ensure pandas < 1.3
python = ">=3.10,<3.11"
add-trailing-comma = "*"
autopep8 = "*"
flake8 = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"
pyproject-flake8 = "*"
mypy = "*"
neovim = "*"
pep8-naming = "*"

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 5

[tool.flake8]
max-line-length = 120
exclude = [
  "*/__init__.py",
]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

